--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# CMake files
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+build/*
+
 # Compiled Object files
 *.slo
 *.lo
