move/install the header files to right locations

--- a/protobuf_comm/CMakeLists.txt
+++ b/protobuf_comm/CMakeLists.txt
@@ -22,6 +22,7 @@ include_directories(${Boost_INCLUDE_DIRS}
 )
 
 file(GLOB PROTOBUF_COMM_SOURCES ${PROTOBUF_COMM_SRC_DIR}/*.cpp)
+file(GLOB PROTOBUF_COMM_HEADERS ${PROTOBUF_COMM_SRC_DIR}/*.h)
 
 message (${PROTOBUF_COMM_SRC_DIR})
 message (${PROTOBUF_COMM_SOURCES})
@@ -30,3 +31,16 @@ add_library(protobuf_comm ${PROTOBUF_COMM_SOURCES})
 
 target_link_libraries(protobuf_comm ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
 
+file(MAKE_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_GLOBAL_INCLUDE_DESTINATION}/${PROJECT_NAME} )
+
+add_custom_target(${PROJECT_NAME}_copy_headers ALL)
+
+foreach(File ${PROTOBUF_COMM_HEADERS})
+  add_custom_command(TARGET ${PROJECT_NAME}_copy_headers POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy ${File} ${CATKIN_DEVEL_PREFIX}/${CATKIN_GLOBAL_INCLUDE_DESTINATION}/${PROJECT_NAME}
+  )
+endforeach()
+
+install(FILES ${PROTOBUF_COMM_HEADERS}
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
