--- a/protobuf_comm/package.xml
+++ b/protobuf_comm/package.xml
@@ -2,14 +2,14 @@
 <package>
   <name>protobuf_comm</name>
   <version>0.0.1</version>
-  <description>Catkinized protobuff_comm package.</description>
+  <description>
+    protobuf_comm is the main library to communicate with the RoCKIn@Work Central Factory Hub (CFH). This package
+    provides protobuf_comm to the ROS build system, thus, simplifying its usage within the ROS ecosystem.
+  </description>
 
   <maintainer email="alexander.moriarty@brsu.de">Alexander Moriarty</maintainer>
 
   <license>GPLv2</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-
-  <export>
-  </export>
 </package>
